<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearPlanetas">

    <ListView
        android:id="@+id/lv_planetas"
        android:layout_width="317dp"
        android:layout_height="319dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_aniadir_programa"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="79dp"
        android:layout_height="30dp"
        android:text="@string/planetas"
        app:layout_constraintBottom_toTopOf="@+id/input_planetas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <EditText
        android:id="@+id/input_planetas"
        android:layout_width="221dp"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/nombre_planeta"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/btn_aniadir_programa"
        android:layout_width="168dp"
        android:layout_height="55dp"
        android:text="@string/anadir_planeta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/btn_salir_aniadir_prog"
        android:layout_width="85dp"
        android:layout_height="47dp"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toEndOf="@+id/btn_aniadir_programa"
        app:layout_constraintTop_toBottomOf="@+id/input_planetas"
        app:layout_constraintVertical_bias="0.103" />
</androidx.constraintlayout.widget.ConstraintLayout>