<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarUniverso">

    <EditText
        android:id="@+id/modificar_nombre_universo"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/hint_aniadir_nombreUniverso"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/btn_cancelar_editar_nombre_universo"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificar_nombre_universo"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/btn_actualizar_nombre_universo"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:text="@string/actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toEndOf="@+id/btn_cancelar_editar_nombre_universo"
        app:layout_constraintTop_toBottomOf="@+id/modificar_nombre_universo"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="29dp"
        android:text="@string/editar_nombre_Universo"
        app:layout_constraintBottom_toTopOf="@+id/modificar_nombre_universo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <TextView
        android:id="@+id/tv_nombre_actual_universo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />
</androidx.constraintlayout.widget.ConstraintLayout>